removed deprecated code
Issue #718