@@ -293,10 +293,10 @@ public class ImixsJSONParser {
                         value = Long.parseLong(stringValue);
                     }
                     if ("xs:float".equalsIgnoreCase(type)) {
-                        value = new Float(stringValue);
+                        value = Float.valueOf(stringValue);
                     }
                     if ("xs:double".equalsIgnoreCase(type)) {
-                        value = new Double(stringValue);
+                        value = Double.valueOf(stringValue);
                     }
                     // default to string
                     if (value == null) {
